style navigation bar

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,16 @@
   font-style: normal;
 }
 
+.logo-background {
+  width: 20px;
+  height: 67px;
+  background-image: url('./assets/stackline-logo.svg');
+  background-size: 165px 162px;
+  background-position: 0px -39px;
+  margin-left: 27px;
+  border-bottom: 5px solid white;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
