--- a/src/output.css
+++ b/src/output.css
@@ -556,6 +556,63 @@ video {
   --tw-contain-style:  ;
 }
 
+.m-6{
+  margin: 1.5rem;
+}
+
+.mx-auto{
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.mb-4{
+  margin-bottom: 1rem;
+}
+
+.mb-5{
+  margin-bottom: 1.25rem;
+}
+
+.ml-6{
+  margin-left: 1.5rem;
+}
+
+.mt-1{
+  margin-top: 0.25rem;
+}
+
+.mt-3{
+  margin-top: 0.75rem;
+}
+
+.mt-\[65px\]{
+  margin-top: 65px;
+}
+
+.mt-\[79px\]{
+  margin-top: 79px;
+}
+
+.ml-0{
+  margin-left: 0px;
+}
+
+.mt-6{
+  margin-top: 1.5rem;
+}
+
+.mb-6{
+  margin-bottom: 1.5rem;
+}
+
+.mb-12{
+  margin-bottom: 3rem;
+}
+
+.flex{
+  display: flex;
+}
+
 .h-\[86px\]{
   height: 86px;
 }
@@ -564,12 +621,28 @@ video {
   height: 100vh;
 }
 
+.w-\[512px\]{
+  width: 512px;
+}
+
+.w-full{
+  width: 100%;
+}
+
 .w-screen{
   width: 100vw;
 }
 
-.border{
-  border-width: 1px;
+.flex-col{
+  flex-direction: column;
+}
+
+.border-b{
+  border-bottom-width: 1px;
+}
+
+.border-t{
+  border-top-width: 1px;
 }
 
 .bg-\[\#052849\]{
@@ -577,20 +650,128 @@ video {
   background-color: rgb(5 40 73 / var(--tw-bg-opacity));
 }
 
-* {
+.bg-\[\#F6F8FA\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(246 248 250 / var(--tw-bg-opacity));
+}
+
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.p-6{
+  padding: 1.5rem;
+}
+
+.pb-4{
+  padding-bottom: 1rem;
+}
+
+.pl-5{
+  padding-left: 1.25rem;
+}
+
+.pl-6{
+  padding-left: 1.5rem;
+}
+
+.pr-5{
+  padding-right: 1.25rem;
+}
+
+.pr-6{
+  padding-right: 1.5rem;
+}
+
+.pt-4{
+  padding-top: 1rem;
+}
+
+.pt-6{
+  padding-top: 1.5rem;
+}
+
+.text-center{
+  text-align: center;
+}
+
+.text-\[1\.39rem\]{
+  font-size: 1.39rem;
+}
+
+.font-normal{
+  font-weight: 400;
+}
+
+.text-\[\#A7B7C9\]{
+  --tw-text-opacity: 1;
+  color: rgb(167 183 201 / var(--tw-text-opacity));
+}
+
+.shadow-lg{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+body{
+  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 300;
   font-family: 'Outfit', sans-serif;
   font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
 }
 
-.logo-background {
-  width: 20px;
-  height: 67px;
+.logo-background{
+  margin-left: 1.75rem;
+  height: 4rem;
+  width: 1.25rem;
+  border-bottom-width: 4px;
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
   background-image: url('./assets/stackline-logo.svg');
   background-size: 165px 162px;
-  background-position: 0px -39px;
-  margin-left: 27px;
-  border-bottom: 5px solid white;
+  background-position: 0px -40px;
 }
 
+.chip{
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  display: inline-block;
+  border-radius: 0.375rem;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+@media (min-width: 640px){
+  .sm\:ml-6{
+    margin-left: 1.5rem;
+  }
+
+  .sm\:mt-0{
+    margin-top: 0px;
+  }
+
+  .sm\:mt-6{
+    margin-top: 1.5rem;
+  }
+
+  .sm\:w-\[512px\]{
+    width: 512px;
+  }
+
+  .sm\:flex-row{
+    flex-direction: row;
+  }
+}
