--- a/src/output.css
+++ b/src/output.css
@@ -621,6 +621,18 @@ video {
   height: 100vh;
 }
 
+.h-full{
+  height: 100%;
+}
+
+.h-4\/6{
+  height: 66.666667%;
+}
+
+.h-3\/4{
+  height: 75%;
+}
+
 .w-\[512px\]{
   width: 512px;
 }
