--- a/src/output.css
+++ b/src/output.css
@@ -560,21 +560,31 @@ video {
   margin: 1.5rem;
 }
 
+.mx-1{
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
 }
 
-.mb-4{
-  margin-bottom: 1rem;
+.my-2{
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .mb-5{
   margin-bottom: 1.25rem;
 }
 
-.ml-6{
-  margin-left: 1.5rem;
+.mb-6{
+  margin-bottom: 1.5rem;
+}
+
+.ml-0{
+  margin-left: 0px;
 }
 
 .mt-1{
@@ -593,24 +603,16 @@ video {
   margin-top: 79px;
 }
 
-.ml-0{
-  margin-left: 0px;
-}
-
-.mt-6{
-  margin-top: 1.5rem;
-}
-
-.mb-6{
-  margin-bottom: 1.5rem;
-}
-
-.mb-12{
-  margin-bottom: 3rem;
+.inline-block{
+  display: inline-block;
 }
 
 .flex{
   display: flex;
+}
+
+.h-3\/4{
+  height: 75%;
 }
 
 .h-\[86px\]{
@@ -619,22 +621,6 @@ video {
 
 .h-screen{
   height: 100vh;
-}
-
-.h-full{
-  height: 100%;
-}
-
-.h-4\/6{
-  height: 66.666667%;
-}
-
-.h-3\/4{
-  height: 75%;
-}
-
-.w-\[512px\]{
-  width: 512px;
 }
 
 .w-full{
@@ -649,12 +635,25 @@ video {
   flex-direction: column;
 }
 
+.rounded-md{
+  border-radius: 0.375rem;
+}
+
+.border{
+  border-width: 1px;
+}
+
 .border-b{
   border-bottom-width: 1px;
 }
 
 .border-t{
   border-top-width: 1px;
+}
+
+.border-gray-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
 .bg-\[\#052849\]{
@@ -676,24 +675,39 @@ video {
   padding: 1.5rem;
 }
 
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.py-0{
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+.py-0\.5{
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
+}
+
 .pb-4{
   padding-bottom: 1rem;
+}
+
+.pl-14{
+  padding-left: 3.5rem;
 }
 
 .pl-5{
   padding-left: 1.25rem;
 }
 
-.pl-6{
-  padding-left: 1.5rem;
+.pr-14{
+  padding-right: 3.5rem;
 }
 
 .pr-5{
   padding-right: 1.25rem;
-}
-
-.pr-6{
-  padding-right: 1.5rem;
 }
 
 .pt-4{
@@ -702,78 +716,6 @@ video {
 
 .pt-6{
   padding-top: 1.5rem;
-}
-
-.pl-8{
-  padding-left: 2rem;
-}
-
-.pr-8{
-  padding-right: 2rem;
-}
-
-.pl-9{
-  padding-left: 2.25rem;
-}
-
-.pr-9{
-  padding-right: 2.25rem;
-}
-
-.pl-10{
-  padding-left: 2.5rem;
-}
-
-.pr-10{
-  padding-right: 2.5rem;
-}
-
-.pl-11{
-  padding-left: 2.75rem;
-}
-
-.pr-11{
-  padding-right: 2.75rem;
-}
-
-.pl-12{
-  padding-left: 3rem;
-}
-
-.pr-12{
-  padding-right: 3rem;
-}
-
-.pl-16{
-  padding-left: 4rem;
-}
-
-.pr-16{
-  padding-right: 4rem;
-}
-
-.pl-20{
-  padding-left: 5rem;
-}
-
-.pr-20{
-  padding-right: 5rem;
-}
-
-.pl-\[4rem\]{
-  padding-left: 4rem;
-}
-
-.pr-\[4rem\]{
-  padding-right: 4rem;
-}
-
-.pl-14{
-  padding-left: 3.5rem;
-}
-
-.pr-14{
-  padding-right: 3.5rem;
 }
 
 .text-center{
@@ -791,6 +733,11 @@ video {
 .text-\[\#A7B7C9\]{
   --tw-text-opacity: 1;
   color: rgb(167 183 201 / var(--tw-text-opacity));
+}
+
+.text-gray-600{
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
 .shadow-lg{
@@ -820,24 +767,6 @@ body{
   background-position: 0px -40px;
 }
 
-.chip{
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-  display: inline-block;
-  border-radius: 0.375rem;
-  border-width: 1px;
-  --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-  padding-top: 0.125rem;
-  padding-bottom: 0.125rem;
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-
 @media (min-width: 640px){
   .sm\:ml-6{
     margin-left: 1.5rem;
@@ -847,40 +776,8 @@ body{
     margin-top: 0px;
   }
 
-  .sm\:mt-6{
-    margin-top: 1.5rem;
-  }
-
-  .sm\:w-\[512px\]{
-    width: 512px;
-  }
-
-  .sm\:w-\[515px\]{
-    width: 515px;
-  }
-
-  .sm\:w-\[520px\]{
-    width: 520px;
-  }
-
-  .sm\:w-\[525px\]{
-    width: 525px;
-  }
-
-  .sm\:w-\[524px\]{
-    width: 524px;
-  }
-
-  .sm\:w-\[523px\]{
-    width: 523px;
-  }
-
   .sm\:w-\[522px\]{
     width: 522px;
-  }
-
-  .sm\:w-\[521px\]{
-    width: 521px;
   }
 
   .sm\:flex-row{
