--- a/src/output.css
+++ b/src/output.css
@@ -603,12 +603,24 @@ video {
   margin-top: 79px;
 }
 
+.mt-4{
+  margin-top: 1rem;
+}
+
+.mt-8{
+  margin-top: 2rem;
+}
+
 .inline-block{
   display: inline-block;
 }
 
 .flex{
   display: flex;
+}
+
+.table{
+  display: table;
 }
 
 .h-3\/4{
@@ -631,8 +643,20 @@ video {
   width: 100vw;
 }
 
+.min-w-full{
+  min-width: 100%;
+}
+
+.cursor-pointer{
+  cursor: pointer;
+}
+
 .flex-col{
   flex-direction: column;
+}
+
+.overflow-x-auto{
+  overflow-x: auto;
 }
 
 .rounded-md{
@@ -675,6 +699,14 @@ video {
   padding: 1.5rem;
 }
 
+.p-4{
+  padding: 1rem;
+}
+
+.p-2{
+  padding: 0.5rem;
+}
+
 .px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -688,6 +720,36 @@ video {
 .py-0\.5{
   padding-top: 0.125rem;
   padding-bottom: 0.125rem;
+}
+
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .pb-4{
@@ -718,8 +780,48 @@ video {
   padding-top: 1.5rem;
 }
 
+.pr-8{
+  padding-right: 2rem;
+}
+
+.pr-12{
+  padding-right: 3rem;
+}
+
+.pr-16{
+  padding-right: 4rem;
+}
+
+.pr-20{
+  padding-right: 5rem;
+}
+
+.pr-24{
+  padding-right: 6rem;
+}
+
+.pr-28{
+  padding-right: 7rem;
+}
+
+.pr-10{
+  padding-right: 2.5rem;
+}
+
+.pr-6{
+  padding-right: 1.5rem;
+}
+
+.text-left{
+  text-align: left;
+}
+
 .text-center{
   text-align: center;
+}
+
+.text-right{
+  text-align: right;
 }
 
 .text-\[1\.39rem\]{
@@ -728,6 +830,22 @@ video {
 
 .font-normal{
   font-weight: 400;
+}
+
+.font-medium{
+  font-weight: 500;
+}
+
+.font-thin{
+  font-weight: 100;
+}
+
+.font-extralight{
+  font-weight: 200;
+}
+
+.font-light{
+  font-weight: 300;
 }
 
 .text-\[\#A7B7C9\]{
