--- a/src/output.css
+++ b/src/output.css
@@ -695,6 +695,11 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-blue-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(219 234 254 / var(--tw-bg-opacity));
+}
+
 .p-6{
   padding: 1.5rem;
 }
