--- a/src/output.css
+++ b/src/output.css
@@ -595,20 +595,12 @@ video {
   margin-top: 0.75rem;
 }
 
-.mt-\[65px\]{
-  margin-top: 65px;
+.mt-8{
+  margin-top: 2rem;
 }
 
 .mt-\[79px\]{
   margin-top: 79px;
-}
-
-.mt-4{
-  margin-top: 1rem;
-}
-
-.mt-8{
-  margin-top: 2rem;
 }
 
 .inline-block{
@@ -631,10 +623,6 @@ video {
   height: 86px;
 }
 
-.h-screen{
-  height: 100vh;
-}
-
 .w-full{
   width: 100%;
 }
@@ -645,10 +633,6 @@ video {
 
 .min-w-full{
   min-width: 100%;
-}
-
-.cursor-pointer{
-  cursor: pointer;
 }
 
 .flex-col{
@@ -675,9 +659,14 @@ video {
   border-top-width: 1px;
 }
 
-.border-gray-200{
+.border-\[\#E5E7EB\]{
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.border-\[\#F5F7F9\]{
+  --tw-border-opacity: 1;
+  border-color: rgb(245 247 249 / var(--tw-border-opacity));
 }
 
 .bg-\[\#052849\]{
@@ -695,26 +684,18 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-blue-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(219 234 254 / var(--tw-bg-opacity));
-}
-
 .p-6{
   padding: 1.5rem;
-}
-
-.p-4{
-  padding: 1rem;
-}
-
-.p-2{
-  padding: 0.5rem;
 }
 
 .px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .py-0{
@@ -725,31 +706,6 @@ video {
 .py-0\.5{
   padding-top: 0.125rem;
   padding-bottom: 0.125rem;
-}
-
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
-.px-8{
-  padding-left: 2rem;
-  padding-right: 2rem;
 }
 
 .py-8{
@@ -773,8 +729,16 @@ video {
   padding-right: 3.5rem;
 }
 
+.pr-28{
+  padding-right: 7rem;
+}
+
 .pr-5{
   padding-right: 1.25rem;
+}
+
+.pr-8{
+  padding-right: 2rem;
 }
 
 .pt-4{
@@ -783,38 +747,6 @@ video {
 
 .pt-6{
   padding-top: 1.5rem;
-}
-
-.pr-8{
-  padding-right: 2rem;
-}
-
-.pr-12{
-  padding-right: 3rem;
-}
-
-.pr-16{
-  padding-right: 4rem;
-}
-
-.pr-20{
-  padding-right: 5rem;
-}
-
-.pr-24{
-  padding-right: 6rem;
-}
-
-.pr-28{
-  padding-right: 7rem;
-}
-
-.pr-10{
-  padding-right: 2.5rem;
-}
-
-.pr-6{
-  padding-right: 1.5rem;
 }
 
 .text-left{
@@ -833,24 +765,8 @@ video {
   font-size: 1.39rem;
 }
 
-.font-normal{
-  font-weight: 400;
-}
-
 .font-medium{
   font-weight: 500;
-}
-
-.font-thin{
-  font-weight: 100;
-}
-
-.font-extralight{
-  font-weight: 200;
-}
-
-.font-light{
-  font-weight: 300;
 }
 
 .text-\[\#A7B7C9\]{
@@ -888,6 +804,22 @@ body{
   background-image: url('./assets/stackline-logo.svg');
   background-size: 165px 162px;
   background-position: 0px -40px;
+}
+
+.product-table-header{
+  cursor: pointer;
+  border-bottom-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(246 248 250 / var(--tw-border-opacity));
+  font-weight: 400;
+}
+
+.product-table-row{
+  border-bottom-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(246 248 250 / var(--tw-border-opacity));
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 @media (min-width: 640px){
